# end-to-end-LLM-application

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 44d83abf9da9_create_document_chunks_table.py  ab05de0e1dd6_create_document_chunks_table.py  bd61ff41638f_create_chunks_table_with_vector_768.py
backend/src/: config.py  log.py
data/: bm25_index.pkl
data/corpus/: doc_1.txt  doc_10.txt  doc_100.txt  doc_101.txt  doc_11.txt  doc_12.txt  doc_13.txt  doc_14.txt  doc_15.txt  doc_16.txt  doc_17.txt  doc_18.txt  doc_19.txt  doc_2.txt  doc_20.txt  doc_21.txt  doc_22.txt  doc_23.txt  doc_24.txt  doc_25.txt  doc_26.txt  doc_27.txt  doc_28.txt  doc_29.txt  doc_3.txt  doc_30.txt  doc_31.txt  doc_32.txt  doc_33.txt  doc_34.txt  doc_35.txt  doc_36.txt  doc_37.txt  doc_38.txt  doc_39.txt  doc_4.txt  doc_40.txt  doc_41.txt  doc_42.txt  doc_43.txt  (+61 more)
docs/images/: pipeline_architecture.html
eval/: golden_dataset.jsonl  metrics.py  run_golden.py
frontend/: Dockerfile  index.html  nginx.conf
src/: config.py  log.py  logging_settings.py  main.py  technical_specification.md
src/api/: base_schemas.py  dependencies.py  endpoints.py  pipeline_schemas.py
src/core/: config.py  logging_settings.py
src/core/database/: db.py  models.py
src/core/security/: injection.py
src/services/: indexing.py  llm_client.py
tests/: test_bm25.py  test_chunker.py  test_embedder.py  test_hybrid.py  test_injection.py  test_metrics.py  test_prompts.py  test_reranker.py  test_schemas.py  test_verifier.py
(+11 files in other folders)
