[project]
name = "end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
]
