[project]
name = "end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "rank-bm25>=0.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.27",
]
